fix bug modal on padding body

--- a/Pardis.WebApp/Content/css/site.css
+++ b/Pardis.WebApp/Content/css/site.css
@@ -65,6 +65,10 @@ body {
     margin-bottom: 60px;
 }
 
+body.sidebar-mini.modal-open {
+    padding-right:inherit !important;
+} 
+
 .footer {
     position: absolute;
     bottom: 0;
